--- a/OneDo/View/Modals/FolderEditor.xaml
+++ b/OneDo/View/Modals/FolderEditor.xaml
@@ -8,78 +8,82 @@
              xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
              xmlns:v="using:OneDo.View"
              xmlns:vmItems="using:OneDo.ViewModel.Items"
-             d:DesignHeight="400"
-             d:DesignWidth="300"
+             d:DesignWidth="264"
              mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <v:ModalBase.Resources>
+
+        <Style x:Key="ColorItemContainerStyle" TargetType="GridViewItem">
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="MinWidth" Value="48" />
+            <Setter Property="MinHeight" Value="48" />
+            <Setter Property="Width" Value="48" />
+            <Setter Property="Height" Value="48" />
+            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            <Setter Property="VerticalContentAlignment" Value="Stretch" />
+            <Setter Property="Margin" Value="0,0,8,8" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="GridViewItem">
+                        <ListViewItemPresenter HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                               VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                               CheckBoxBrush="Transparent"
+                                               CheckBrush="{ThemeResource SystemControlForegroundChromeWhiteBrush}"
+                                               CheckMode="Overlay"
+                                               ContentMargin="{TemplateBinding Padding}"
+                                               ContentTransitions="{TemplateBinding ContentTransitions}"
+                                               DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
+                                               DragBackground="{ThemeResource ListViewItemDragBackgroundThemeBrush}"
+                                               DragForeground="{ThemeResource ListViewItemDragForegroundThemeBrush}"
+                                               DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
+                                               FocusBorderBrush="{ThemeResource SystemControlForegroundAltHighBrush}"
+                                               FocusSecondaryBorderBrush="{ThemeResource SystemControlForegroundBaseHighBrush}"
+                                               PlaceholderBackground="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}"
+                                               PointerOverBackground="{ThemeResource SystemControlBackgroundBaseMediumBrush}"
+                                               PointerOverForeground="{ThemeResource SystemControlForegroundBaseHighBrush}"
+                                               PressedBackground="{ThemeResource SystemControlBackgroundBaseMediumHighBrush}"
+                                               ReorderHintOffset="{ThemeResource GridViewItemReorderHintThemeOffset}"
+                                               SelectedBackground="{ThemeResource SystemControlBackgroundBaseMediumBrush}"
+                                               SelectedForeground="{ThemeResource SystemControlForegroundBaseHighBrush}"
+                                               SelectedPointerOverBackground="{ThemeResource SystemControlBackgroundBaseMediumHighBrush}"
+                                               SelectedPressedBackground="{ThemeResource SystemControlBackgroundBaseMediumHighBrush}"
+                                               SelectionCheckMarkVisualEnabled="True" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <DataTemplate x:Key="ColorItemTemplate" x:DataType="vmItems:ColorItemObject">
+            <Border Background="{x:Bind Color, Converter={StaticResource ColorToBrushConverter}}" />
+        </DataTemplate>
+
+    </v:ModalBase.Resources>
+
+    <Grid Width="264" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackPanel Margin="16">
+        <StackPanel Margin="24,16">
             <TextBox Margin="0,0,0,16"
+                     Style="{StaticResource SimpleTextBoxStyle}"
                      PlaceholderText="Folder"
                      Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <GridView Margin="0,0,-8,-8"
+                      ItemContainerStyle="{StaticResource ColorItemContainerStyle}"
                       ItemContainerTransitions="{x:Null}"
+                      ItemTemplate="{StaticResource ColorItemTemplate}"
                       ItemsSource="{x:Bind VM.Colors}"
                       SelectedItem="{x:Bind VM.SelectedColor, Mode=TwoWay, Converter={StaticResource ChangeTypeConverter}}"
                       SelectionChanged="Colors_SelectionChanged"
                       SelectionMode="Multiple">
-                <GridView.ItemContainerStyle>
-                    <Style TargetType="GridViewItem">
-                        <Setter Property="BorderThickness" Value="0" />
-                        <Setter Property="Padding" Value="0" />
-                        <Setter Property="MinWidth" Value="48" />
-                        <Setter Property="MinHeight" Value="48" />
-                        <Setter Property="Width" Value="48" />
-                        <Setter Property="Height" Value="48" />
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                        <Setter Property="Margin" Value="0,0,8,8" />
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="GridViewItem">
-                                    <ListViewItemPresenter HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                           VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                           CheckBoxBrush="Transparent"
-                                                           CheckBrush="{ThemeResource SystemControlForegroundChromeWhiteBrush}"
-                                                           CheckMode="Overlay"
-                                                           ContentMargin="{TemplateBinding Padding}"
-                                                           ContentTransitions="{TemplateBinding ContentTransitions}"
-                                                           DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
-                                                           DragBackground="{ThemeResource ListViewItemDragBackgroundThemeBrush}"
-                                                           DragForeground="{ThemeResource ListViewItemDragForegroundThemeBrush}"
-                                                           DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
-                                                           FocusBorderBrush="{ThemeResource SystemControlForegroundAltHighBrush}"
-                                                           FocusSecondaryBorderBrush="{ThemeResource SystemControlForegroundBaseHighBrush}"
-                                                           PlaceholderBackground="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}"
-                                                           PointerOverBackground="{ThemeResource SystemControlHighlightListLowBrush}"
-                                                           PointerOverForeground="{ThemeResource SystemControlForegroundBaseHighBrush}"
-                                                           PressedBackground="{ThemeResource SystemControlHighlightListMediumBrush}"
-                                                           ReorderHintOffset="{ThemeResource GridViewItemReorderHintThemeOffset}"
-                                                           SelectedBackground="{ThemeResource SystemControlHighlightListLowBrush}"
-                                                           SelectedForeground="{ThemeResource SystemControlForegroundBaseHighBrush}"
-                                                           SelectedPointerOverBackground="{ThemeResource SystemControlHighlightListLowBrush}"
-                                                           SelectedPressedBackground="{ThemeResource SystemControlHighlightListMediumBrush}"
-                                                           SelectionCheckMarkVisualEnabled="True" />
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </GridView.ItemContainerStyle>
                 <GridView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <ItemsWrapGrid MaximumRowsOrColumns="4" Orientation="Horizontal" />
                     </ItemsPanelTemplate>
                 </GridView.ItemsPanel>
-                <GridView.ItemTemplate>
-                    <DataTemplate x:DataType="vmItems:ColorItemObject">
-                        <Border Background="{x:Bind Color, Converter={StaticResource ColorToBrushConverter}}" />
-                    </DataTemplate>
-                </GridView.ItemTemplate>
             </GridView>
         </StackPanel>
 
