--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -16,6 +16,7 @@
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/TextBoxStyles.xaml" />
                 <ResourceDictionary Source="Themes/FlyoutMenuStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
